here  I have added little javacript to make my webpage interactive.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </header>
     <section id="showcase">
       <div class="contain">
-          <h1>Affordable Professional Web Design</h1>
-          <p>Ryan Dahl is the auther and creator of node.js which gives another new dimention to look at creating servers</p>
+          <h1>Affordable & Professional Web Design</h1>
+          <p>Responsive web design is an approach whereby a designer creates a web page that “responds to” or resizes itself depending on the type of device it is being seen through.</p>
       </div>
     </section>
     <section id="newsletter">
