--- a/services.html
+++ b/services.html
@@ -80,6 +80,24 @@
                      <input class="button_1" type="button" value="Shop for Houses" onclick="findHouses(this.form);"/>
                   </form>
                 </div>
+              <div class="dark">
+                   <h3>Get a Quote</h3>
+                   <form class="quote">
+                     <div>
+                       <label>Name</label><br>
+                       <input type="text" placeholder="Name">
+                     </div>
+                     <div>
+                       <label>Email</label><br>
+                       <input type="text" placeholder="Email address">
+                     </div>
+                     <div>
+                       <label>Message</label><br>
+                       <textarea placeholder="Message" ></textarea>
+                     </div>
+                   <button class="button_1" type="submit">Send</button>
+                   </form>
+                 </div>
               </aside>
 
       </div>
