added new services..git push origin master

--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
     </header>
     <section id="newsletter">
       <div class="contain">
-        <h1>Subscribe to Our House Finder Services</h1>
+        <h1>Subscribe to Our New Services</h1>
         <form>
           <input type="email" placeholder="Enter Email...">
           <button type="submit" class="button_1">Subscribe</button>
@@ -41,26 +41,26 @@
                 <h1 class="page-title">Services</h1>
                  <ul id="services">
                    <li>
-                     <h3>Website Design</h3>
+                     <h3>House Brokery</h3>
                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Industry's standard dummy text ever since the 1500.</p>>
                      <p>Pricing : $1000 - 5000$</p>
                   </li>
                   <li>
-                    <h3>Website Maintainence</h3>
+                    <h3>Recommendation Service</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Industry's standard dummy text ever since the 1500.</p>>
                     <p>Pricing : $100 - 500$</p>
                  </li>
                  <li>
-                   <h3>Website Hosting</h3>
+                   <h3>Cost Optimization For Housing</h3>
                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Industry's standard dummy text ever since the 1500.</p>>
-                   <p>Pricing : $25 - 50$</p>
+                   <p>Pricing : $250 - 500$</p>
                 </li>
                </ul>
               </article>
 
               <aside id="sidebar">
                 <div class="dark">
-                  <h3>Search for Houses</h3>
+                  <h3>Search a House for Relocation</h3>
                   <form name="orderform" action="" method="POST">
                    <div>
                       <label>Enter your annual income</label><br>
@@ -81,7 +81,7 @@
                   </form>
                 </div>
               <div class="dark">
-                   <h3>Get a Quote</h3>
+                   <h3>Enroll for Recommendation Service</h3>
                    <form class="quote">
                      <div>
                        <label>Name</label><br>
