--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
               </article>
               <aside id="sidebar">
                 <div class="dark">
-                  <h3>What we do</h3>
+                  <h3>What we do?</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
                 </div>
               </aside>
