nearly done the design part!!

--- a/services.html
+++ b/services.html
@@ -74,9 +74,9 @@
                       <label>Enter your ZIP code</label><br>
                       <input id="zip" type="text" placeholder="Enter your ZIP code"/>
                    </div>
-                    <div>
+                    <div id="a">
                      <input class="button_1" type="button" value="Calculate Price" onclick="calcPrice();" />
-                    </div>
+                    </div >
                      <input class="button_1" type="button" value="Shop for Houses" onclick="findHouses(this.form);"/>
                   </form>
                 </div>
