--- a/index.html
+++ b/index.html
@@ -52,15 +52,14 @@
           <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the look and formatting of a document written in a markup language.</p>
         </div>
         <div class="box">
-          <img src="./img/logo_graphic.png">
-        <h3>Graphic design</h3>
-          <p>Graphic design is the process of visual communication and problem-solving through the use of typography, photography and illustration.</p>
+          <img src="./img/coffee-script.jpg">
+        <h3>CoffeeScript</h3>
+          <p>CoffeeScript is a programming language that transcompiles to JavaScript. It adds syntactic sugar inspired by Ruby, Python and Haskell in an effort to enhance JavaScript's brevity and readability.</p>
         </div>
       </div>
-    </section>
+     </section>
     <footer>
       <p>Qphi Web Design, Copyright &copy; 2019</p>
     </footer>
-
   </body>
 </html>
